force-app/main/default/objects/User/fields/ASW_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ASW_ID_Number__c</fullName>
    <label>ASW ID Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>