force-app/main/default/objects/User/fields/Display_Board_Manager__c.field-meta.xml
<CustomField>
    <fullName>Display_Board_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold is the user can Update operations. Defined only because encrypted field can&apos;t not be used in filters</description>
    <label>Display Board Manager</label>
    <type>Checkbox</type>
</CustomField>