force-app/main/default/objects/User/fields/Display_Board_Password__c.field-meta.xml
<CustomField>
    <fullName>Display_Board_Password__c</fullName>
    <description>Holds display board password</description>
    <label>Display Board Password</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>