force-app/main/default/objects/User/fields/Ecard_Access_Time__c.field-meta.xml
<CustomField>
    <fullName>Ecard_Access_Time__c</fullName>
    <label>Ecard Access Time</label>
    <type>DateTime</type>
</CustomField>