force-app/main/default/objects/User/fields/Ecard_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Ecard_Access_Token__c</fullName>
    <label>Ecard Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>