force-app/main/default/objects/User/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>